--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "cypress-snippets",
     "displayName": "cypress-snippets",
     "description": "Snippets for Cypress",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "publisher": "ricowilcke",
     "license": "MIT",
     "engines": {
@@ -18,11 +18,15 @@
     "categories": [
         "Snippets"
     ],
-    "icon": "images/icon.jpg",
+    "icon": "img/logo.jpg",
     "contributes": {
         "snippets": [
             {
                 "language": "javascript",
+                "path": "./snippets/snippets.code-snippets"
+            },
+            {
+                "language": "typescript",
                 "path": "./snippets/snippets.code-snippets"
             }
         ]
